RESOLVED FIXED225983
Ripping out broken Baseline JIT rare case profiling.
https://bugs.webkit.org/show_bug.cgi?id=225983
Summary Ripping out broken Baseline JIT rare case profiling.
Mark Lam
Reported 2021-05-19 14:30:10 PDT
The profiling has been broken in recent times. Fixing it to work does not appear to improve performance. Ripping out the profiling appears to not hurt performance. However, ripping out the profiling appears to save on code size generated for the Baseline JIT.
Attachments
proposed patch. (12.68 KB, patch)
2021-05-19 14:47 PDT, Mark Lam
saam: review+
Mark Lam
Comment 1 2021-05-19 14:47:38 PDT
Created attachment 429098 [details] proposed patch.
Yusuke Suzuki
Comment 2 2021-05-19 14:55:19 PDT
*** Bug 224618 has been marked as a duplicate of this bug. ***
Robin Morisset
Comment 3 2021-05-19 14:55:38 PDT
Comment on attachment 429098 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=429098&action=review r=me too > Source/JavaScriptCore/ChangeLog:9 > + to improve performance. Ripping out the profiling appears to not hurt performance. Can you mention in the Changelog what performance test you ran to verify this (JetStream2? Speedometer?)?.
Mark Lam
Comment 4 2021-05-19 15:30:57 PDT
Thanks for the reviews. Landed in r277758: <http://trac.webkit.org/r277758>.
Radar WebKit Bug Importer
Comment 5 2021-05-19 15:31:18 PDT
Note You need to log in before you can comment on or make changes to this bug.